--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
+  "proxy": "http://api.scb.se",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -34,7 +35,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "proxy": "http://api.scb.se"
+    ]
   }
 }
