--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^1.1.0"
   },
   "proxy": "http://api.scb.se",
+  "homepage": "http://realgobi.se/landscape",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
